# infra-genie

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yml  implement.md  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  main.py
src/cleaners/: __init__.py  security_group_cleaner.py
src/core/: __init__.py  aws_client.py  base_scanner.py  exceptions.py  logging.py  region_manager.py
src/reporters/: __init__.py  cli_reporter.py  csv_reporter.py  json_reporter.py
src/scanners/: __init__.py  eip_scanner.py  security_group_scanner.py  subnet_scanner.py  vpc_scanner.py
tests/: __init__.py  conftest.py  test_aws_client.py  test_region_manager.py  test_reporters.py  test_security_group_cleaner.py  test_security_group_scanner.py
