[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-genie"
version = "0.1.0"
description = "Enterprise-grade AWS resource scanner and cleaner for identifying and removing unused cloud resources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Infra-Genie Team", email = "team@infra-genie.dev"}
]
maintainers = [
    {name = "Infra-Genie Team", email = "team@infra-genie.dev"}
]
keywords = [
    "aws",
    "cloud",
    "infrastructure",
    "security-groups",
    "cost-optimization",
    "resource-management",
    "devops",
    "finops",
    "cloud-cleanup",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/infra-genie/infra-genie"
Documentation = "https://infra-genie.readthedocs.io"
Repository = "https://github.com/infra-genie/infra-genie"
Changelog = "https://github.com/infra-genie/infra-genie/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/infra-genie/infra-genie/issues"

[project.scripts]
infra-genie = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# =============================================================================
# Ruff - Fast Python Linter
# =============================================================================
[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "B904",    # raise from - we handle exception chaining deliberately
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PTH123",  # pathlib.Path.open - open() is more readable for simple cases
    "RUF012",  # mutable class attributes (used intentionally for constants)
    "RUF022",  # unsorted __all__ (we group logically)
    "SIM102",  # nested if statements - sometimes more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"src/main.py" = ["ARG001"]  # Click callbacks require specific signatures

[tool.ruff.lint.isort]
known-first-party = ["src"]

# =============================================================================
# Black - Code Formatter
# =============================================================================
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

# =============================================================================
# MyPy - Static Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "moto.*",
    "click.*",
    "rich.*",
    "yaml.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
